# Elden-Parry-Ordinator-Patch-NG

./: .gitignore  Build Debug.bat  Build Release.bat  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
cmake/: AddCXXFiles.cmake  Version.h.in  XSEPlugin.cmake
include/: PCH.h
include/lib/: PrecisionAPI.h  ValhallaCombatAPI.h
src/: AnimEventHandler.cpp  AnimEventHandler.h  EldenParry.cpp  EldenParry.h  HitHandler.cpp  Hooks.h  ParryHandler.cpp  Settings.cpp  Settings.h  Utils.hpp  XSEPlugin.cpp
